--- a/index.html
+++ b/index.html
@@ -6,6 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>بی‌قانون آباد | ماجراجویی بی‌پایان ماین‌کرفت</title>
 
+    <!-- ================== SEO Tags (New!) ================== -->
+    <!-- Meta Description: This is the text that appears under your site's title in Google search results. -->
+    <meta
+      name="description"
+      content="به بی‌قانون آباد خوش آمدید! سرور ماین‌کرفت جاوا و بدراک رسول کرفت. جایی برای ماجراجویی، ساخت و ساز و هرج و مرج بی‌پایان. همین حالا رایگان بازی کنید!"
+    />
+    <!-- Meta Keywords: These help search engines understand what your site is about. -->
+    <meta
+      name="keywords"
+      content="سرور ماین کرفت, ماین کرفت ایران, سرور بدراک, سرور جاوا, رسول کرفت, بی‌قانون آباد, minecraft server, rasoulcraft, بی قانون آباد"
+    />
+    <!-- Favicon: The little icon in the browser tab. -->
+    <link rel="icon" type="image/png" href="./assets/images/dimond.png" />
+
+    <!-- ================== Open Graph / Facebook / Discord Tags (New!) ================== -->
+    <!-- These tags control how your site looks when shared on social media. -->
+    <meta
+      property="og:title"
+      content="بی‌قانون آباد | سرور ماین‌کرفت جاوا و بدراک"
+    />
+    <meta
+      property="og:description"
+      content="به بی‌قانون آباد خوش آمدید! سرور ماین‌کرفت جاوا و بدراک رسول کرفت. جایی برای ماجراجویی، ساخت و ساز و هرج و مرج بی‌پایان. همین حالا رایگان بازی کنید!"
+    />
+    <meta property="og:image" content="./assets/images/background-03.png" />
+    <meta property="og:url" content="https://bighanoonabad.com" />
+    <!-- Replace with your actual domain -->
+    <meta property="og:type" content="website" />
+
+    <!-- ================== Twitter Card Tags (New!) ================== -->
+    <!-- These are similar to Open Graph, but specifically for Twitter. -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="بی‌قانون آباد | سرور ماین‌کرفت جاوا و بدراک"
+    />
+    <meta
+      name="twitter:description"
+      content="به بی‌قانون آباد خوش آمدید! سرور ماین‌کرفت جاوا و بدراک رسول کرفت. جایی برای ماجراجویی، ساخت و ساز و هرج و مرج بی‌پایان. همین حالا رایگان بازی کنید!"
+    />
+    <meta name="twitter:image" content="./assets/images/background-03.png" />
+    <!-- ============================================================= -->
+
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -190,7 +233,6 @@
                 -- / --
               </p>
             </div>
-            <!-- UPDATED: Server address block now uses the new creative style -->
             <div class="bg-gray-800 p-8 rounded-xl border-4 border-gray-700">
               <h3
                 class="text-2xl font-bold mb-4 flex items-center justify-center"
@@ -238,7 +280,6 @@
             </div>
 
             <div class="lg:col-span-2 grid grid-cols-1 md:grid-cols-2 gap-10">
-              <!-- UPDATED: Java Edition now uses the new creative blocks -->
               <div class="bg-gray-900 p-8 rounded-lg border-4 border-gray-700">
                 <h3 class="text-3xl font-bold text-orange-500 mb-4 text-center">
                   Java Edition
@@ -272,7 +313,6 @@
                   </p>
                 </div>
               </div>
-              <!-- UPDATED: Bedrock section with new creative blocks -->
               <div class="bg-gray-900 p-8 rounded-lg border-4 border-gray-700">
                 <h3 class="text-3xl font-bold text-cyan-400 mb-4 text-center">
                   Bedrock Edition
@@ -591,7 +631,3 @@
     <script src="./assets/scripts/app.js"></script>
   </body>
 </html>
-
-<!-- bighanoonabad/assets/styles/index.css -->
-
-<!-- bighanoonabad/assets/scripts/app.js -->
